CSS: Ensure search box is readable in dark mode

--- a/ui/resources/static/assets/Global.css
+++ b/ui/resources/static/assets/Global.css
@@ -68,6 +68,7 @@ input[type=search][name=q] {
     border: 1px solid var(--color-dark-grey);
     border-radius: .5rem;
     box-sizing: border-box;
+    color: var(--color-black);
 }
 
 details > summary {
